--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <input type="text" id="sourceurl"><br>
 <button onclick="FixTheLink();">Old player time!</button>
 <p><a id="output" target="_blank">Your URL will appear here.</a></p>
-<p>Not working correctly? <a>Open an issue on GitHub.</a></p>
+<p>Not working correctly? <a href="https://github.com/stopmotio/YoutubeShortsBegone/issues/new?assignees=&labels=&template=bug-report.md&title=Error%21">Open an issue on GitHub.</a></p>
 </body>
 </html>
