Pretty Pretty Pretty

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
 </head>
 <body>
-<h1>Sometimes the regular player is a completely superior experience.</h1>
-<input type="text" id="sourceurl"><br>
-<button onclick="FixTheLink();">Old player time!</button>
-<p><a id="output" target="_blank">Your URL will appear here.</a></p>
-<p>Not working correctly? <a href="https://github.com/stopmotio/YoutubeShortsBegone/issues/new?assignees=&labels=&template=bug-report.md&title=Error%21">Open an issue on GitHub.</a></p>
+  <div class="flexdiv">
+    <h1>Sometimes the regular player is a completely superior experience.</h1>
+    <input type="text" id="sourceurl">
+    <button onclick="FixTheLink();">Old player time!</button>
+    <p><a id="output" target="_blank">Your URL will appear here.</a></p>
+    <p>Not working correctly? <a href="https://github.com/stopmotio/YoutubeShortsBegone/issues/new?assignees=&labels=&template=bug-report.md&title=Error%21">Open an issue on GitHub.</a></p>
+  </div>
 </body>
 </html>
