--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <div class="flexdiv">
-    <h1>Sometimes the regular player is a completely superior experience.</h1>
-    <input type="text" id="sourceurl">
-    <button onclick="FixTheLink();">Old player time!</button>
+    <h1>View any short as a normal video.</h1>
+    <input type="text" id="sourceurl" placeholder="Drop a link from the in-app share button">
+    <button onclick="FixTheLink();">Generate URL</button>
     <p><a id="output" target="_blank">Your URL will appear here.</a></p>
     <p>Not working correctly? <a href="https://github.com/stopmotio/YoutubeShortsBegone/issues/new?assignees=&labels=&template=bug-report.md&title=Error%21">Open an issue on GitHub.</a></p>
   </div>
